Fix broken CSS modules styles (temporary fix)

--- a/src/style.css
+++ b/src/style.css
@@ -55,7 +55,7 @@ form{
     padding: 2%;
 }
 
-.logo{
+:global(.logo){
     height: 100px;
     margin: 50px auto 20px auto;
 }
@@ -76,7 +76,7 @@ h2{
     margin: 10px auto 50px auto;
 }
 
-.card{
+:global(.card){
     display: grid;
     grid-template-rows: repeat(2, min-content);
     padding: 10px;
@@ -89,7 +89,7 @@ h2{
     place-items: stretch;
 }
 
-.option{
+:global(.option){
     display: grid;
     grid-template-rows: repeat(3, min-content);
     gap: 10px;
@@ -102,23 +102,23 @@ h2{
     border: 1px var(--font) solid;
 }
 
-.add{
+:global(.add){
     background-color: var(--background-add);
 }
 
-.sheet-controls{
+:global(.sheet-controls){
     display: flex;
     flex-direction: column;
     gap: 10px;
     align-self: flex-start;
 }
 
-.no-button{
+:global(.no-button){
     grid-template-columns: 1fr;
     grid-template-rows: repeat(2, min-content);
 }
 
-.text-area{
+:global(.text-area){
     font-family: "Roboto", sans-serif;
     padding: 10px;
     font-size: 16px;
@@ -127,7 +127,7 @@ h2{
     width: 100%;
 }
 
-.text-input{
+:global(.text-input){
     font-family: "Roboto", sans-serif;
     padding: 5px;
     font-size: 12px;
@@ -137,7 +137,7 @@ h2{
     width: 100%;
 }
 
-.input-container{
+:global(.input-container){
     display: flex;
     flex-wrap: wrap;
     gap: 5px;
@@ -145,20 +145,20 @@ h2{
     width: 100%;
 }
 
-.label{
+:global(.label){
     margin-top: 20px;
     font-size: 18px;
     text-align: center;
 }
 
-.label-input{
+:global(.label-input){
     font-size: 12px;
     text-align: left;
     justify-self: flex-start;
     align-self: flex-start;
 }
 
-.button{
+:global(.button){
     width: 50px;
     height: 50px;
     border: none;
@@ -167,13 +167,13 @@ h2{
     margin-right: 0;
 }
 
-.button-icon{
+:global(.button-icon){
     width: 50px;
     transition: .3s ease;
     filter: saturate(0%) brightness(0%);
 }
 
-.button-choice{
+:global(.button-choice){
     border-radius: 5px;
     padding: 5px;;
     background-color: var(--background-option);
@@ -185,38 +185,38 @@ h2{
     font-size: 12px
 }
 /*order in css file indicates which properites override*/
-.selected{
+:global(.selected){
     background-color: var(--font-green);
     color: var(--background-option);
 }
 
-.button-choice:active{
+:global(.button-choice:active){
     transform: scale(90%);
 }
 
-.choices-container{
+:global(.choices-container){
     display: flex;
     flex-direction: column;
     gap: 5px;
     width: 100%;
 }
 
-.button-icon:hover{
+:global(.button-icon:hover){
     transform: scale(80%);
     filter: saturate(100%);
 }
 
-.item-name{
+:global(.item-name){
     font-family: "Roboto", sans-serif;
     font-size: 16px;
     color: var(--font);
 }
 
-.item-count{
+:global(.item-count){
     color: var(--font-green);
 }
 
-.error{
+:global(.error){
     font-family: "Roboto", sans-serif;
     color: var(--font-red);
     text-align: center;
@@ -224,11 +224,11 @@ h2{
     min-height: 20px;
 }
 
-.info{
+:global(.info){
     color: var(--font-green);
 }
 
-.select{
+:global(.select){
     grid-template-rows: 1fr;
     grid-template-columns: repeat(2, 1fr);;
 }
@@ -239,7 +239,7 @@ h2{
 
 @media (min-width: 700px)
 {
-    .logo{
+    :global(.logo){
         height: 200px;
     }
 
@@ -251,23 +251,23 @@ h2{
         font-size: 32px;
     }
 
-    .label{
+    :global(.label){
         font-size: 24px;
     }
 
-    .label-input{
+    :global(.label-input){
         font-size: 16px;
     }
 
-    .text-input{
+    :global(.text-input){
         font-size: 16px;
     }
 
-    .button-choice{
+    :global(.button-choice){
         font-size: 16px;
     }
 
-    .card{
+    :global(.card){
         gap: 10px;
         padding: 30px;
     }
@@ -276,31 +276,31 @@ h2{
         gap: 20px;
     }
 
-    .error{
+    :global(.error){
         font-size: 16px;
     }
     
-    .item-name{
+    :global(.item-name){
         font-size: 20px;
     }
 
-    .option{
+    :global(.option){
         grid-template-columns: repeat(2, 5fr) 1fr;
         grid-template-rows: 1fr;
     }
 
-    .no-button{
+    :global(.no-button){
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: 1fr;
     }
 
-    .select{
+    :global(.select){
         grid-template-columns: 1fr 3fr;
         grid-template-rows: 1fr;
     }
 }
 
 /*added last to override everything*/
-.data-sheet{
+:global(.data-sheet){
     grid-template-columns: 10fr 1fr;
 }
